Added support for /status webpage, and for storing jackd and jamulus ip on the /boot drive, allowing offline editing.

--- a/07-headless-jamulus/files/jamulus.service
+++ b/07-headless-jamulus/files/jamulus.service
@@ -2,7 +2,8 @@
 Description=Login run jamulus
 
 [Service]
-ExecStart=jamulus --nogui --connect _JAMULUS_IP_ --mutemyown --clientname _JAMULUS_CLIENT_
+EnvironmentFile=/boot/jamulus.sh
+ExecStart=jamulus --nogui --connect ${JAMULUS_IP} --mutemyown --clientname ${JAMULUS_CLIENT}
 
 [Install]
 WantedBy=default.target
